package com.twentysixcore.chefapi.domain;

public enum TipoUsuario {
    CLIENTE,
    DONO_RESTAURANTE,
    ADMIN
}
