@startuml "Arquitetura Hexagonal - Visão Simplificada"

!theme vibrant
' Mantendo o espaçamento para uma boa legibilidade
skinparam nodesep 20
skinparam ranksep 300

title Arquitetura Hexagonal - Visão Simplificada

package "Application (Use Cases)" <<Hexagon>> #LightBlue {
  package "Domain (Core)" <<Hexagon>> #LightYellow {
    package "model" {
      class Usuario
      class Endereco
      enum TipoUsuario
    }
  }

  package "ports" {
    package "in (Driving Ports)" {
      record CadastrarUsuarioInput
      record UsuarioOutput
      interface CadastrarUsuario {
        + executar(input: CadastrarUsuarioInput) : UsuarioOutput
      }
    }
    package "out (Driven Ports)" {
      interface UsuarioRepository {
        + salvar(usuario: Usuario) : Usuario
      }
      interface SenhaEncoder {
        + encode(rawPassword: CharSequence) : String
      }
    }
  }
  package "usecase" {
    class CadastrarUsuarioUseCase
  }
}

package "Infrastructure (Adapters)" <<Cloud>> #LightGrey {
  package "rest (Driving Adapter)" {
    class UsuarioController {
    + criar(request: UsuarioRequestDTO) : UsuarioResponseDTO
    }
    package "dto" {
      record EnderecoDto
      record UsuarioRequestDTO
      record UsuarioResponseDTO
    }
  }
  package "persistence (Driven Adapter)" {
    class UsuarioRepositoryAdapter
    class UsuarioEntity
    interface UsuarioJPARepository
  }
  package "seguranca" {
    class BCryptSenhaEncoder
  }
}

' --- Relacionamentos e Dependências ---

' --- Camada de Infraestrutura ---
' Adapter de API (Driving)
UsuarioController ..> CadastrarUsuario : chama
UsuarioRequestDTO --> EnderecoDto : utiliza

' Adapter de Persistência (Driven)
UsuarioRepositoryAdapter ..|> UsuarioRepository : implementa
UsuarioRepositoryAdapter --> UsuarioJPARepository : utiliza
UsuarioJPARepository ..> UsuarioEntity : opera sobre

' Adapter de Segurança (Driven)
BCryptSenhaEncoder ..|> SenhaEncoder : implementa

' --- Camada de Aplicação ---
CadastrarUsuarioUseCase ..|> CadastrarUsuario : implementa
CadastrarUsuarioUseCase --> UsuarioRepository : utiliza
CadastrarUsuarioUseCase --> SenhaEncoder : utiliza
CadastrarUsuarioUseCase --> Usuario : manipula

' --- Camada de Domínio ---
Usuario --> TipoUsuario : usa
Usuario --> Endereco : usa

' --- Dependências entre Camadas ---
Infrastructure -right-> Application : depende de
Application -right-> Domain : depende de

@enduml